@@ -5,39 +5,39 @@
 		<gesmes:name>European Central Bank</gesmes:name>
 	</gesmes:Sender>
 	<Cube>
-		<Cube time='2018-06-08'>
-			<Cube currency='USD' rate='1.1754'/>
-			<Cube currency='JPY' rate='128.64'/>
+		<Cube time='2018-08-08'>
+			<Cube currency='USD' rate='1.1589'/>
+			<Cube currency='JPY' rate='128.72'/>
 			<Cube currency='BGN' rate='1.9558'/>
-			<Cube currency='CZK' rate='25.795'/>
-			<Cube currency='DKK' rate='7.4476'/>
-			<Cube currency='GBP' rate='0.87733'/>
-			<Cube currency='HUF' rate='319.70'/>
-			<Cube currency='PLN' rate='4.2793'/>
-			<Cube currency='RON' rate='4.6593'/>
-			<Cube currency='SEK' rate='10.2870'/>
-			<Cube currency='CHF' rate='1.1572'/>
-			<Cube currency='ISK' rate='124.70'/>
-			<Cube currency='NOK' rate='9.5085'/>
-			<Cube currency='HRK' rate='7.3830'/>
-			<Cube currency='RUB' rate='73.4773'/>
-			<Cube currency='TRY' rate='5.2798'/>
-			<Cube currency='AUD' rate='1.5496'/>
-			<Cube currency='BRL' rate='4.5149'/>
-			<Cube currency='CAD' rate='1.5274'/>
-			<Cube currency='CNY' rate='7.5333'/>
-			<Cube currency='HKD' rate='9.2222'/>
-			<Cube currency='IDR' rate='16373.32'/>
-			<Cube currency='ILS' rate='4.2009'/>
-			<Cube currency='INR' rate='79.3420'/>
-			<Cube currency='KRW' rate='1263.46'/>
-			<Cube currency='MXN' rate='24.0774'/>
-			<Cube currency='MYR' rate='4.6867'/>
-			<Cube currency='NZD' rate='1.6734'/>
-			<Cube currency='PHP' rate='62.068'/>
-			<Cube currency='SGD' rate='1.5702'/>
-			<Cube currency='THB' rate='37.683'/>
-			<Cube currency='ZAR' rate='15.3821'/>
+			<Cube currency='CZK' rate='25.578'/>
+			<Cube currency='DKK' rate='7.4534'/>
+			<Cube currency='GBP' rate='0.90085'/>
+			<Cube currency='HUF' rate='319.26'/>
+			<Cube currency='PLN' rate='4.2597'/>
+			<Cube currency='RON' rate='4.6430'/>
+			<Cube currency='SEK' rate='10.3878'/>
+			<Cube currency='CHF' rate='1.1544'/>
+			<Cube currency='ISK' rate='124.00'/>
+			<Cube currency='NOK' rate='9.5303'/>
+			<Cube currency='HRK' rate='7.4320'/>
+			<Cube currency='RUB' rate='75.0618'/>
+			<Cube currency='TRY' rate='6.1257'/>
+			<Cube currency='AUD' rate='1.5647'/>
+			<Cube currency='BRL' rate='4.3533'/>
+			<Cube currency='CAD' rate='1.5158'/>
+			<Cube currency='CNY' rate='7.9231'/>
+			<Cube currency='HKD' rate='9.0971'/>
+			<Cube currency='IDR' rate='16728.72'/>
+			<Cube currency='ILS' rate='4.2698'/>
+			<Cube currency='INR' rate='79.5295'/>
+			<Cube currency='KRW' rate='1298.58'/>
+			<Cube currency='MXN' rate='21.4471'/>
+			<Cube currency='MYR' rate='4.7188'/>
+			<Cube currency='NZD' rate='1.7202'/>
+			<Cube currency='PHP' rate='61.466'/>
+			<Cube currency='SGD' rate='1.5814'/>
+			<Cube currency='THB' rate='38.499'/>
+			<Cube currency='ZAR' rate='15.5607'/>
 		</Cube>
 	</Cube>
 </gesmes:Envelope>
