@@ -1,6 +1,7 @@
 2018-08-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
-	* Fix f(x)+b=b (e.g. x+1=1)
+	* Fix f(x)+a=a (e.g. x+1=1)
+	* Fix automatic unit conversion after RPN stack calculations
 
 2018-08-08 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
